# starccato

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  paper_plots.html  pyproject.toml  search.html  searchindex.js  signal_generation.html  snr.html  training.html
.doctrees/: environment.pickle  index.doctree  paper_plots.doctree  signal_generation.doctree  training.doctree
.github/workflows/: docs.yml  publish.yml  tests.yml
_sources/: index.md  signal_generation.ipynb  training.ipynb
docs/: _config.yml  _toc.yml  conf.py  index.md  paper_plots.ipynb  signal_generation.ipynb  snr.ipynb  training.ipynb
src/staccato/: __init__.py  cli.py  defaults.py  discriminator.py  generate_signals.py  generator.py  logger.py  plotting.py  signal_loader.py  train.py  utils.py
src/staccato/nn/: __init__.py  discriminator.py  generator.py
src/staccato/nn/generator/: __init__.py  dcgan_generator.py
src/staccato/training/: __init__.py  train.py  trainer.py  training_data.py
src/starccato/: __init__.py  cli.py  defaults.py  logger.py  plotting.py  utils.py
src/starccato/nn/: __init__.py  save_load_models.py
src/starccato/nn/discriminator/: __init__.py  dcgan_discriminator.py
src/starccato/nn/generator/: __init__.py  dcgan_generator.py
src/starccato/training/: __init__.py  trainer.py  training_data.py
tests/: conftest.py  test_generator.py  test_training.py  test_training_data.py
